Change Cover & Letter

--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EID MUBARAK</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
     	<div class="card">
 		    <div class="imgBox">
 			    <Sediv class="bark"></Sediv>
-			        <img src="https://i.ibb.co/k8R5Tsb/rect851.png"> <!-- Upload Cover di sini -->
+			        <img src="Re.png"> <!-- Upload Cover di sini -->
 		    </div>
 		<div class="details">
 			<h4 class="color1">Selamat Idul Fitri </h2> <!-- Tulis judul di sini -->
 			<h4 class="color2 margin">Refi Nurifani Putri</h3> <!-- Tulis sub-judul di sini -->
-        <h4 class="color2 margin">Indonesia</h3>
 			<p></p> <!-- Tulis bait awal di sini -->
 			<p>Mohon Maaf telah kembali menaruh hati, </p>
 			<p>Tanpa kamu sadari kusimpan dalam Batin</p>
-			<p>Tapi itu takan mungkin</p>
-            <p>tanpa persetujuan dua individu</p>
-			<p>Mohon Maaf Lahir & Batin</p>
+			<p>Mohon Maaf telah mengganggu dalam chat</p>
+			<p>Mungkin kamu lupa mau mu 2020</p>
+			<p>Jika kamu sudah ada yang punya</p>
+			<p>Bilanglah padaku dan jika belum</p>
 			<p>Aku harap bisa kembali</p>
+			<p>Tapi itu takan mungkin</p>
+            <p>tanpa memaafkan diri sendiri</p>
+			<p>Mohon Maaf Lahir & Batin</p>
 			<p>baik yang disengaja</p>
 			<p>maupun yang tak disengaja.</p> 
         <!-- Tulis bait akhir di sini -->
-			<p class="text-right">Dari orang ditahun 2018</p> <!-- Tulis tertanda di sini -->
-			<p class="text-right">♥ Imam Satrio P ♥</p>
+			<p class="text-right">Time Travel 2018</p> <!-- Tulis tertanda di sini -->
+			<p class="text-right">Imam Satrio P </p>
 		</div> <!-- Tulis nama kamu di sini -->
 	</div>
 </body>
